--- a/src/main/resources/assets/jei/lang/de_de.lang
+++ b/src/main/resources/assets/jei/lang/de_de.lang
@@ -14,7 +14,7 @@ jei.tooltip.cheat.mode.how.to.disable.hotkey=Klicke auf %s zum Umschalten.
 jei.tooltip.cheat.mode.how.to.disable.no.hotkey=%s-klicke hier zum Umschalten.
 jei.tooltip.recipe.by=Rezept von: %s
 jei.tooltip.recipe.id=Rezept-ID: %s
-jei.tooltip.not.enough.space=Hier ist nicht genug Platz zum Anzeigen der Zutatenliste.
+jei.tooltip.not.enough.space=Hier ist nicht genug Platz zum Anzeigen der Itemliste.
 jei.tooltip.ingredient.list.disabled=Die HEI-Oberfläche ist deaktiviert.
 jei.tooltip.ingredient.list.disabled.how.to.fix=Klicke auf %s zum Aktivieren.
 jei.tooltip.bookmarks=HEI-Lesezeichen
@@ -148,4 +148,4 @@ config.jei.rendering.bufferIngredientRenders=Zutaten-Darstellung puffern
 config.jei.rendering.bufferIngredientRenders.comment=Unterbindet extrem häufige Zutaten-Darstellungsaufrufe durch Verwendung eines Renderpuffers, verbessert die FPS in Menüs um das 2-3fache. Allerdings werden Animationen und Glitzern nicht korrekt angewendet.
 
 config.jei.interface.defaultFluidContainerItem=Standard-Flüssigkeitsbehälter
-config.jei.interface.defaultFluidContainerItem.comment=Voreingestelltes Item, der zum Auffüllen von Flüssigkeiten verwendet wird, wenn im Menü auf eine Flüssigkeitszutat geklickt wird.
+config.jei.interface.defaultFluidContainerItem.comment=Voreingestelltes Item, das zum Auffüllen von Flüssigkeiten verwendet wird, wenn im Menü auf eine Flüssigkeitszutat geklickt wird.
